tests/snapshots/test_runner__tests__compiler__typecheck__documentation_code_snippet_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
# Test double code snippet in documentation

###
This function takes anything string and output 123.
For example:
```
do "Hey".foo().print()
```

Second example:
```
do null.foo().print() # Compile error: expected `String` but got `Null`
```
###
let foo
  : | String => Integer
  = | _ => 123

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
   ┌─ tests/compiler/typecheck/documentation_code_snippet_2.kk:12:4
   │
12 │ do null.foo().print() # Compile error: expected `String` but got `Null`
   │    ^^^^ Type mismatch
   │
   = +---------------+-------------+
     | EXPECTED TYPE | ACTUAL TYPE |
     +---------------+-------------+
     | - String      | + Null      |
     +---------------+-------------+
